fixes spacing on "Don't be shy develop it" lettering

--- a/_scss/home-page.scss
+++ b/_scss/home-page.scss
@@ -23,7 +23,8 @@
     width: 100%;
     @media screen and (max-width: 500px) {
       font-size: 2.5rem;
-      padding-top: 50px;
+      padding-top: 30px;
+      line-height: 4rem;
     }
   }
     img {
